<resources>
    <string name="app_name">Zaverecne</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>

    <!-- Login and Register Strings -->
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="email">Email</string>
    <string name="invalid_password">Password too short, enter minimum 6 characters!</string>
    <string name="invalid_username">Enter username</string>
    <string name="invalid_email">Enter correct email format</string>
    <string name="invalid_verify_password">Passwords do not match</string>
    <string name="auth_failed">Authentication failed, check your username and password or sign up</string>
    <string name="register_failed">Registration failed, please try again.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_verify_password">Verify password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register Now!</string>
    <string name="btn_link_to_login">Already registered? Login me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="successful_reg_text">You successfully registered! Now you can Log In</string>
    <string name="add_post_text">Add a new post to wall!</string>
    <string name="add_post_text_type">Choose if you want to upload video or photo: </string>
    <string name="pick_image">Pick image</string>
    <string name="capture_image">Capture image</string>
    <string name="pick_video">Pick video</string>
    <string name="capture_video">Capture video</string>
    <string name="postedOnText">Posted On : </string>





    <!-- Feed Strings -->
    <string name="record_video">Record video</string>
    <string name="select_from_gallery">Select from gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="no_items">No Items</string>
    <string name="no_video_created">No Video Created</string>
    <string name="my_gallery">My Gallery</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="gallery_recycle_view">Gallery Recycle View</string>
    <string name="folder_view">Folder Recycle View</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="share">share</string>
    <string name="old_password">Enter old password</string>
    <string name="change_password_fail">Entered old password is wrong, reset failed.</string>
    <string name="takePhotoProfile">Vytvoriť fotku fotoaparátom</string>
    <string name="chooseGalleryProfile">Nahrať fotku z galérie</string>
    <string name="showProfilePic">Zobraziť fotku</string>
    <string name="deletePost">Vymazať príspevok</string>
    <string name="deleteProfilePhoto">Vymazať profilovú fotku</string>
    <string name="sharePost">Zdieľať</string>
    <string name="loading">Načitávam</string>
    <plurals name="numberOfFiles">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>

    <plurals name="numberOfFolders">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d folder</item>
        <item quantity="other">%d folders</item>
    </plurals>
</resources>

