<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
        <variable
            name="profileViewModel"
            type="sk.stuba.fei.mv.android.zaverecne.profile.ProfileViewModel" />
    </data>

<RelativeLayout
    android:id="@+id/rellay1"
    android:background="@drawable/profilebg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/backProfil"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"

        android:layout_below="@id/navBar"
        android:layout_centerVertical="true"
        tools:context=".profile.ProfileFragment">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/profile_image_main"
            android:layout_height="@dimen/profile_image_main"
            android:background="@drawable/circle_shape"
            app:civ_border_color="@color/material_gray_400"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:profile="@{profileViewModel.loggedInUserView.profile}" />

        <ProgressBar
            android:id="@+id/progressBarProfile"
            android:layout_width="@dimen/profile_image_main"
            android:layout_height="@dimen/profile_image_main"
            android:padding="1dp"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circle_shape"
            android:max="100"
            android:visibility="gone"
            apiStatusFeed="@{profileViewModel.status}"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="@id/profile_image"
                  />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:civ_border_color="@color/material_gray_300"
            app:civ_border_width="1dp"
            android:elevation="8dp"
            app:civ_circle_background_color="@color/material_gray_200"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image" />






    <ImageView
        android:id="@+id/status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:apiStatus="@{profileViewModel.status}"
        />



</androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_centerVertical="true"
        tools:context=".profile.ProfileFragment">

        <TextView
            android:id="@+id/user_name"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{profileViewModel.loggedInUserView.username}"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/container2"
            app:layout_constraintTop_toTopOf="@id/container2" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/container2"
        android:layout_centerVertical="true"
        tools:context=".profile.ProfileFragment">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="@+id/container3"
            app:layout_constraintTop_toTopOf="@id/container3"
            android:src="@drawable/ic_baseline_mail_outline_24" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{profileViewModel.loggedInUserView.email}"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/emailIcon"
            app:layout_constraintBottom_toBottomOf="@id/container3"
            app:layout_constraintTop_toTopOf="@id/container3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container3"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp"
        tools:context=".profile.ProfileFragment">

    <Button
        android:id="@+id/link_change_pass_button"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/link_logout_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/link_change_pass_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>

</layout>